...
            android:minHeight="48dp"
            android:hint="Phone (optional)"
            android:backgroundTint="#CCCCCC"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/ui_background"
            app:layout_constraintStart_toStartOf="parent"
...
