<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ui_background">

    <TextView
        android:id="@+id/EventName"
        android:layout_width="393dp"
        android:layout_height="132dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="cursive"
        android:text="Select Event Name"
        android:textAlignment="center"
        android:textColor="#A1FFFFFF"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/imageButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#000000"
        android:text="Image"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/QRCodeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/QRCodeButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#000000"
        android:text="QR Code"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/DetailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/DetailButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="216dp"
        android:backgroundTint="#000000"
        android:text="Event Detail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_in_main"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:layout_marginBottom="616dp"
        android:backgroundTint="#000000"
        android:text=""
        android:textSize="20sp"
        app:icon="@drawable/backicon"
        app:iconPadding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="271dp"
        android:layout_height="94dp"
        android:contentDescription="event_poster"
        android:scaleType="centerCrop"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="140dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>