...
        android:fontFamily="casual"
        android:text="Events"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eventsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/eventsList"
        android:layout_width="match_parent"
...
